# Python-Tls-Client

./: .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
tests/: test_cookies.py  test_debug.py  test_memory.py  test_memory_native.py  test_proxy.py  test_random.py  test_speed.py
tls_client/: __init__.py  __version__.py  api.py  cffi.py  constants.py  cookies.py  exceptions.py  response.py  sessions.py  structures.py
